# MedAudit-Diff-Watcher

./: .gitignore  CHANGELOG.md  README.md  config.example.yaml  config.gui-dev.example.yaml  pyproject.toml
doc/: AI_WORK_RULES.md  ARCHITECTURE.md  CHANGELOG_GUIDE.md  CLI_USAGE.md  CONFIGURATION.md  DATABASE.md  DEVELOPMENT.md  GUI_DESKTOP_PACKAGING.md  PROJECT_OVERVIEW.md  README.md  REPORTS_AND_STORAGE.md  TROUBLESHOOTING.md
medaudit_diff_watcher/: __init__.py  __main__.py  ai_client.py  cli.py  compare_tool_launcher.py  config.py  csv_diff.py  doctor.py  gui_config_form.py  gui_launcher.py  gui_qt_app.py  gui_support.py  gui_yaml_highlighter.py  models.py  pipeline.py  planner.py  reporting.py  repository.py  stability.py  utils.py  watcher.py
packaging/inno/: MedAuditDiffWatcher.iss
packaging/pyinstaller/: medaudit_diff_watcher_gui.spec
scripts/: build_gui.ps1
tests/: test_ai_client.py  test_ai_payload.py  test_compare_tool_launcher.py  test_config_save.py  test_csv_diff.py  test_multi_watch_config.py  test_pipeline.py  test_planner.py  test_repository_migration.py  test_repository_query_lists.py
